--- a/src/animation.css
+++ b/src/animation.css
@@ -50,7 +50,9 @@ body {
     position: absolute;
     left: 450px;
     bottom: 0;
-}
-#developer_infected img {
     display: none;
+}
+
+.yg1 {
+    
 }
